--- a/package.json
+++ b/package.json
@@ -4,11 +4,17 @@
   "description": "Este meu primeiro servidor usando node JS",
   "main": "App.js",
   "scripts": {
+    "dev":"nodemon app",
     "test": "echo \"Error: no tesput specified\" && exit 1"
   },
   "author": "Carlos Augusto",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
+    "sharp": "^0.31.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
